# elden_mod_loader_gui

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
benches/: data_collection.rs  data_collection_benchmark.rs
src/: ini_parser.rs  lib.rs  main.rs
src/ini_tools/: parser.rs  writer.rs
src/utils/: display.rs  installer.rs  subscriber.rs
src/utils/ini/: common.rs  mod_loader.rs  parser.rs  writer.rs
tests/: common.rs  test_ini_tools.rs  test_lib.rs
ui/: appwindow.slint  common.slint  editmod.slint  main.slint  page.slint  settings.slint  sub-pages.slint  tab-bar.slint  tab_bar.slint  tabs.slint
