[package]
name = "elden_mod_loader_gui"
version = "0.9.4"
authors = ["WardLordRuby"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
ProductName = "Elden Mod Loader GUI"
FileDescription = "Elden Ring mod manager made by: WardLordRuby"
ProductVersion = "0.9.4-beta"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
tokio = { version = "1.37.0", features = ["sync"] }
slint = { version = "1.6.0", features = ["raw-window-handle-06"] }
i-slint-backend-winit = "1.6.0"
winit = "0.29.4"
rfd = "0.14.1"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rust-ini = "0.21.0"

[build-dependencies]
slint-build = "1.6.0"
winresource = "0.1.17"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "data_collection_benchmark"
harness = false
