[package]
name = "elden_mod_loader_gui"
version = "0.9.7"
authors = ["WardLordRuby"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
ProductName = "Elden Mod Loader GUI"
FileDescription = "Elden Ring mod manager by: WardLordRuby"
ProductVersion = "0.9.7-beta"

[profile.release]
opt-level = "s"  # Optimize for size.
lto = true

[dependencies]
tokio = { version = "1.41.0", features = ["sync"] }
slint = { version = "1.9.1", features = ["raw-window-handle-06"] }
i-slint-backend-winit = "1.9.1"
winit = "0.30.8"
rfd = "0.15.0"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
rust-ini = "0.21.1"

[build-dependencies]
slint-build = "1.9.1"
winresource = "0.1.19"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[[bench]]
name = "data_collection"
harness = false
